Fix alignment issues with message and changed end of game message

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,8 @@ body {
 .game-components > div {
   display: flex;
   justify-content: center;
+  align-items: center;
+  font-size: 0.8em;
   width: 100%;
   height: 41px;
 }
